sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:22: error: not found: value Blanc
          if (getCouleur(avantBlanc) == Blanc && getCouleur(blancRouge) != ROUGE) {
                                        ^